feat: splash screen

--- a/index.html
+++ b/index.html
@@ -1,17 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minecraft JS</title>
-  </head>
-  <body>
-    <div id="app"></div>
 
-    <div id="info">
-      <div id="player-position"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Minecraft JS</title>
+</head>
+
+<body>
+  <div id="app"></div>
+
+  <!-- <div id="splash-screen">
+    <div id="title">
+      <h1>Terrain Generator</h1>
+      <h3>Threejs edition</h3>
+      <p>More addictive then lemonade!!!</p>
     </div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+    <ul>
+      <li><span>Ameesha</span> <span> NNM22CS019</span></li>
+      <li><span>Ameesha</span> <span> NNM22CS019</span></li>
+      <li><span>Ameesha</span> <span> NNM22CS019</span></li>
+      <li><span>Ameesha</span> <span> NNM22CS019</span></li>
+    </ul>
+
+
+    <button id="start-button">Start Game</button>
+
+  </div> -->
+
+
+
+  <div id="main-menu">
+    <div class="mc-title">
+      <h1>Terrain Generator</h1>
+      <h3>Threejs edition</h3>
+      <p>More addictive then lemonade!!!</p>
+    </div>
+    <!-- Menu -->
+    <div class="mc-menu">
+      <!-- Button -->
+      <div class="mc-button full">
+        <div class="title"><span>Ameesha</span> <span>NNM22CS019</span></div>
+      </div>
+      <div class="mc-button full">
+        <div class="title"><span>Anusha</span> <span>NNM22CS031</span></div>
+      </div>
+      <div class="mc-button full">
+        <div class="title"><span>Karthik S Salian</span> <span>NNM22CS087</span></div>
+      </div>
+      <div class="mc-button full">
+        <div class="title"><span>Suhan Shetty</span> <span>NNM22CS181</span></div>
+      </div>
+
+      <!-- Double button -->
+      <div class="double">
+        <div class="mc-button full">
+          <div class="title" id="start-button">Start</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div id="info">
+    <div id="player-position"></div>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
